# rusty-shield

./: .gitignore  Cargo.toml  README.md
scripts/translation/: required_translations.json  translations.json
src/: captcha.rs  ip_validator.rs  lib.rs  renderer.rs  utils.rs
src/templates/: captcha.html  check.html
unminimized_templates/: captcha.html  check.html
