[package]
name = "rusty_shield"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
lazy_static = "1.5.0"
url = "2.5.4"
hmac = "0.12.1"
rand = "0.8.5"
sha2 = "0.10.8"
base64 = "0.22.1"
html-escape = "0.2.13"
redis = "0.27.6"
reqwest = { version = "0.12.9", features = ["json"] }
chrono = "0.4.39"
dns-lookup = "2.0.4"
actix-web = "4.9.0"
futures-util = "0.3.31"
actix-rt = "2.10.0"
futures = "0.3.31"